--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,7 +49,7 @@ jobs:
           host: 34.22.73.181
           username: fghkk12d
           source: "real_coding_server-0.0.1-SNAPSHOT.jar"
-          target: "/home/adulkid.kaya"
+          target: "/home/fghkk12d"
           key: ${{ secrets.PRIVATE_KEY }}
 
   run-app:
